--- a/html/build-hls-server.html
+++ b/html/build-hls-server.html
@@ -17,7 +17,7 @@
 </p>
 
 <p>
-之前也好奇直播平台到底是个什么原理，就按照文章里面的步骤试了一把，代码放在了 <a href="codes/misc/http-live-streaming">github</a> 上面。
+之前也好奇直播平台到底是个什么原理，就按照文章里面的步骤试了一把，代码放在了 <a href="https://github.com/dirtysalt/dirtysalt.github.io/tree/master/codes/misc/http-live-streaming">github</a> 上面。
 </p>
 
 <p>
