--- a/html/caffe.html
+++ b/html/caffe.html
@@ -368,7 +368,7 @@ caffe的python binding功能还是非常完备的
 </ul>
 
 <p>
-我写了个 <a href="codes/kaggle/digit-recognizer">示例</a> 来解决Kaggle上 <a href="http://www.kaggle.com/c/digit-recognizer">手写数字识别</a> 问题，prototxt是在examples/mnist基础上稍作修改的（增加了一个dropout）。
+我写了个 <a href="https://github.com/dirtysalt/dirtysalt.github.io/tree/master/codes/kaggle/digit-recognizer">示例</a> 来解决Kaggle上 <a href="http://www.kaggle.com/c/digit-recognizer">手写数字识别</a> 问题，prototxt是在examples/mnist基础上稍作修改的（增加了一个dropout）。
 </p>
 
 <p>
