--- a/html/central-limit-theorem.html
+++ b/html/central-limit-theorem.html
@@ -27,7 +27,7 @@
 </ul>
 
 <p>
-中心极限定理部分解释了为什么正态分布在自然界中广泛存在. 绝大多数动物(或是其他生命形式)的特征比如体重, 都会受到大量遗传和环境因素的影响, 而且这些影响是具有可加性的. 我们观测到的这些特征是大量微观因素的叠加, 所以他们都近似地服从正态分布. <a href="codes/py/misc/stats_clt.py">code on github</a>
+中心极限定理部分解释了为什么正态分布在自然界中广泛存在. 绝大多数动物(或是其他生命形式)的特征比如体重, 都会受到大量遗传和环境因素的影响, 而且这些影响是具有可加性的. 我们观测到的这些特征是大量微观因素的叠加, 所以他们都近似地服从正态分布. <a href="https://github.com/dirtysalt/dirtysalt.github.io/tree/master/codes/py/misc/stats_clt.py">code on github</a>
 </p>
 
 <div class="org-src-container">
