--- a/html/competitive-programming-problems.html
+++ b/html/competitive-programming-problems.html
@@ -825,7 +825,7 @@ class MyCalendar:
 
 <p>
 而II这题目不管是手写平衡树，还是使用这种讨巧的办法，最坏情况下面时间复杂度都是O(n). 手写平衡树需要进行区间分隔，
-代码比较长而且很容易出错，实现可以看 <a href="codes/contest/lintcode/my-calendar-ii.py">code on github</a>. 一种更好的实现是，维护一个计数器overlap，每当进入某个区间的时候
+代码比较长而且很容易出错，实现可以看 <a href="https://github.com/dirtysalt/dirtysalt.github.io/tree/master/codes/contest/lintcode/my-calendar-ii.py">code on github</a>. 一种更好的实现是，维护一个计数器overlap，每当进入某个区间的时候
 overlap+1, 从某个区间出来的时候overlap-1. 如果在某个时候overlap &gt;=3 的话，那么说明有3个区间交叠。
 </p>
 
@@ -1414,7 +1414,7 @@ class Solution:
 </ol>
 <p>
 这个方法对 <a href="https://leetcode.com/problems/best-time-to-buy-and-sell-stock-ii">122. Best Time to Buy and Sell Stock II</a> 是可以work的，但是用在本题上找不到最优解。
-方法可以看 <a href="codes/contest/leetcode/best-time-to-buy-and-sell-stock-with-transaction-fee.py">code on github</a> 里面的 `maxProfitWA`
+方法可以看 <a href="https://github.com/dirtysalt/dirtysalt.github.io/tree/master/codes/contest/leetcode/best-time-to-buy-and-sell-stock-with-transaction-fee.py">code on github</a> 里面的 `maxProfitWA`
 </p>
 
 <p>
