--- a/html/cpp.html
+++ b/html/cpp.html
@@ -790,7 +790,7 @@ x.push(<span class="org-constant">boost</span>::bind(&amp;<span class="org-const
 </p>
 
 <p>
-具体代码可以参考 <a href="codes/cc/misc/test_bind.cc">code on github</a>
+具体代码可以参考 <a href="https://github.com/dirtysalt/dirtysalt.github.io/tree/master/codes/cc/misc/test_bind.cc">code on github</a>
 </p>
 </div>
 </div>
@@ -807,7 +807,7 @@ x.push(<span class="org-constant">boost</span>::bind(&amp;<span class="org-const
 </p>
 
 <p>
-具体代码可以参考 <a href="codes/cc/misc/test_spirit.cc">code on github</a>
+具体代码可以参考 <a href="https://github.com/dirtysalt/dirtysalt.github.io/tree/master/codes/cc/misc/test_spirit.cc">code on github</a>
 </p>
 </div>
 </div>
@@ -820,7 +820,7 @@ x.push(<span class="org-constant">boost</span>::bind(&amp;<span class="org-const
 </p>
 
 <p>
-用作配置文件不错. 具体代码可以参考 <a href="codes/cc/misc/test_ptree.cc">code on github</a>
+用作配置文件不错. 具体代码可以参考 <a href="https://github.com/dirtysalt/dirtysalt.github.io/tree/master/codes/cc/misc/test_ptree.cc">code on github</a>
 </p>
 </div>
 </div>
@@ -833,7 +833,7 @@ x.push(<span class="org-constant">boost</span>::bind(&amp;<span class="org-const
 </p>
 
 <p>
-编写Python Extension. 具体代码可以参考 <a href="codes/cc/misc/test_pye.cc">code on github</a>
+编写Python Extension. 具体代码可以参考 <a href="https://github.com/dirtysalt/dirtysalt.github.io/tree/master/codes/cc/misc/test_pye.cc">code on github</a>
 </p>
 </div>
 </div>
