--- a/html/docker.html
+++ b/html/docker.html
@@ -488,7 +488,7 @@ Dockerfile格式很简单的:
 </ul>
 
 <p>
-可以参考创建 <a href="codes/misc/docker-files/mysql/Dockerfile">mysql</a> 和 <a href="codes/misc/docker-files/redis/Dockerfile">redis</a> 镜像的Dockerfile.
+可以参考创建 <a href="https://github.com/dirtysalt/dirtysalt.github.io/tree/master/codes/misc/docker-files/mysql/Dockerfile">mysql</a> 和 <a href="https://github.com/dirtysalt/dirtysalt.github.io/tree/master/codes/misc/docker-files/redis/Dockerfile">redis</a> 镜像的Dockerfile.
 </p>
 </div>
 </div>
