--- a/html/ffmpeg.html
+++ b/html/ffmpeg.html
@@ -33,7 +33,7 @@
 </p>
 
 <p>
-多个视频合并. 可以使用 <a href="codes/py/misc/ffmpeg-concat-mp4-files.py">这个脚本</a>. 最好确保几个视频尺寸相同.
+多个视频合并. 可以使用 <a href="https://github.com/dirtysalt/dirtysalt.github.io/tree/master/codes/py/misc/ffmpeg-concat-mp4-files.py">这个脚本</a>. 最好确保几个视频尺寸相同.
 </p>
 
 <p>
