--- a/html/find-lca-using-rmq.html
+++ b/html/find-lca-using-rmq.html
@@ -17,7 +17,7 @@
 </p>
 
 <p>
-LCA可以使用 <a href="https://www.geeksforgeeks.org/tarjans-off-line-lowest-common-ancestors-algorithm/">Tarjan</a> 的离线 <a href="codes/contest/misc/tarjan_lca.py">算法</a>，也可以将这个问题转变成为RMQ. 这个过程并不复杂，但是还比较有启发性。
+LCA可以使用 <a href="https://www.geeksforgeeks.org/tarjans-off-line-lowest-common-ancestors-algorithm/">Tarjan</a> 的离线 <a href="https://github.com/dirtysalt/dirtysalt.github.io/tree/master/codes/contest/misc/tarjan_lca.py">算法</a>，也可以将这个问题转变成为RMQ. 这个过程并不复杂，但是还比较有启发性。
 </p>
 
 <p>
