--- a/html/general-algorithm.html
+++ b/html/general-algorithm.html
@@ -580,7 +580,7 @@ a1 a1 a1 a2 a2 a2 &#x2026; an an an X
 </p>
 
 <p>
-UPDATE@2015-09-08: 这个问题是 <a href="https://en.wikipedia.org/wiki/Monty_Hall_problem">Monty Hall Problem</a>, 可以通过 <a href="codes/py/scripts/monty_hall.py">模拟</a> 来计算结果
+UPDATE@2015-09-08: 这个问题是 <a href="https://en.wikipedia.org/wiki/Monty_Hall_problem">Monty Hall Problem</a>, 可以通过 <a href="https://github.com/dirtysalt/dirtysalt.github.io/tree/master/codes/py/scripts/monty_hall.py">模拟</a> 来计算结果
 </p>
 </div>
 </div>
