--- a/html/hive-getting-started.html
+++ b/html/hive-getting-started.html
@@ -291,7 +291,7 @@ Time taken: 5.787 seconds
 </ul>
 
 <p>
-上面例子是使用文本数据. 这里有个 <a href="codes/scala/hive-avro">例子</a> 如何使用avro数据.
+上面例子是使用文本数据. 这里有个 <a href="https://github.com/dirtysalt/dirtysalt.github.io/tree/master/codes/scala/hive-avro">例子</a> 如何使用avro数据.
 </p>
 </div>
 </div>
