--- a/html/index-ml.html
+++ b/html/index-ml.html
@@ -40,7 +40,7 @@
 <li><a href="mining-massive-datasets.html">Mining Massive Datasets on Coursera</a> 挖掘大规模数据</li>
 <li><a href="http://www.autonlab.org/tutorials/list.html">Statistical Data Mining Tutorials</a> by <a href="http://www.cs.cmu.edu/~awm/">Andrew W. Moore</a></li>
 <li><a href="ml-class.html">Coursera: Machine Learning</a> by Andrew Ng <a href="images/coursera-ml-2014.pdf">证书</a></li>
-<li><a href="codes/kaggle/">My kaggle's code</a> and <a href="codes/py/mlcode/">一些机器学习算法实现</a></li>
+<li><a href="https://github.com/dirtysalt/dirtysalt.github.io/tree/master/codes/kaggle/">My kaggle's code</a> and <a href="https://github.com/dirtysalt/dirtysalt.github.io/tree/master/codes/py/mlcode/">一些机器学习算法实现</a></li>
 <li><a href="machine-learning-for-trading-class.html">Machine Learning for Trading</a></li>
 <li><a href="neural-networks-and-deep-learning.html">Coursera: Neural Networks and Deep Learning</a> by Andrew Ng <a href="images/coursera-nn-dl.pdf">证书</a></li>
 <li><a href="improving-deep-neural-networks.html">Coursera: Improving Deep Neural Networks</a> by Andrew Ng <a href="images/coursera-dnn.pdf">证书</a></li>
