--- a/html/index-np.html
+++ b/html/index-np.html
@@ -14,7 +14,7 @@
 <h1 class="title">网络编程 Network Programming</h1>
 <ul class="org-ul">
 <li><a href="unp.html">UNP</a> Unix网络编程(Unix Network Programming), W. Richard Stevens的神作。包含了TCP Illustrated v1里面和TCP相关的部分章节内容。</li>
-<li><a href="codes/cc/itachi/">itachi</a> 自己两天时间写完的异步网络编程框架内核。</li>
+<li><a href="https://github.com/dirtysalt/dirtysalt.github.io/tree/master/codes/cc/itachi/">itachi</a> 自己两天时间写完的异步网络编程框架内核。</li>
 <li><a href="libev.html">libev</a> 开源的事件触发器，被认为是更高效的libevent.</li>
 <li><a href="hpserver.html">hpserver</a> 开源的网络编程框架，可以当做一个入门级的网络编程框架阅读。</li>
 <li><a href="nmstl.html">nmstl</a> 开源的网络编程框架。一个很早的作品，代码十分简洁，实现了SEDA的思想。</li>
