--- a/html/index-pl.html
+++ b/html/index-pl.html
@@ -15,7 +15,7 @@
 <ul class="org-ul">
 <li><a href="thoughts-on-prog-lang.html">thoughts on programming language</a>
 <ul class="org-ul">
-<li>compiler course <a href="images/compiler-cs143.pdf">cs143</a>(<a href="codes/cc/cs143/">code</a>)</li>
+<li>compiler course <a href="images/compiler-cs143.pdf">cs143</a>(<a href="https://github.com/dirtysalt/dirtysalt.github.io/tree/master/codes/cc/cs143/">code</a>)</li>
 <li><a href="continuation.html">continuation</a></li>
 <li><a href="build-system.html">build-system</a> 在实现Baidu in-house的构建工具 <a href="http://wenku.baidu.com/view/19f3d535284ac850ad0242cc.html">comake2</a> 之前做的构建系统调研总结.</li>
 <li><a href="swig.html">swig</a> C/C++多语言扩展接口生成器. 使用起来非常方便, 但是本身不太完善, 比较适合用于原型系统.</li>
