--- a/html/kaggle-bike-sharing-demand.html
+++ b/html/kaggle-bike-sharing-demand.html
@@ -13,7 +13,7 @@
 <div id="content">
 <h1 class="title">Kaggle Bike Sharing Demand</h1>
 <p>
-<a href="codes/kaggle/bike-sharing-demand">code on github</a>
+<a href="https://github.com/dirtysalt/dirtysalt.github.io/tree/master/codes/kaggle/bike-sharing-demand">code on github</a>
 </p>
 
 <p>
