--- a/html/kaggle-facial-keypoints-detection.html
+++ b/html/kaggle-facial-keypoints-detection.html
@@ -13,7 +13,7 @@
 <div id="content">
 <h1 class="title">Kaggle Facial Keypoints Detection</h1>
 <p>
-<a href="codes/kaggle/facial-keypoints-detection.py">code on github</a>
+<a href="https://github.com/dirtysalt/dirtysalt.github.io/tree/master/codes/kaggle/facial-keypoints-detection.py">code on github</a>
 </p>
 
 <p>
