--- a/html/klotski-solving.html
+++ b/html/klotski-solving.html
@@ -25,7 +25,7 @@
 </div>
 </div>
 <p>
-<a href="codes/contest/misc/klotski.py">code on github</a>
+<a href="https://github.com/dirtysalt/dirtysalt.github.io/tree/master/codes/contest/misc/klotski.py">code on github</a>
 </p>
 
 <p>
