--- a/html/machine-learning-for-trading-class.html
+++ b/html/machine-learning-for-trading-class.html
@@ -17,7 +17,7 @@ Udacity: <a href="https://classroom.udacity.com/courses/ud501">https://classroom
 </p>
 
 <p>
-这么课程在Coursera上面也有。整个课程分为两个部分，但是在Cousera上面只放了 <a href="https://www.coursera.org/learn/computational-investing">前半部分</a> 。我整理了当时的 <a href="codes/py/qstk-hw/">作业</a> 答案
+这么课程在Coursera上面也有。整个课程分为两个部分，但是在Cousera上面只放了 <a href="https://www.coursera.org/learn/computational-investing">前半部分</a> 。我整理了当时的 <a href="https://github.com/dirtysalt/dirtysalt.github.io/tree/master/codes/py/qstk-hw/">作业</a> 答案
 </p>
 
 <p>
