--- a/html/nginx-log-parser-opt.html
+++ b/html/nginx-log-parser-opt.html
@@ -87,7 +87,7 @@ py 1.12 secs
 
 <hr />
 <p>
-附带上生成正则表达式的代码 <a href="codes/py/misc/ngx_log_parser.py">Implementation</a>
+附带上生成正则表达式的代码 <a href="https://github.com/dirtysalt/dirtysalt.github.io/tree/master/codes/py/misc/ngx_log_parser.py">Implementation</a>
 </p>
 
 <div class="org-src-container">
