--- a/html/spark.html
+++ b/html/spark.html
@@ -25,9 +25,9 @@
 <h2 id="org46ccaa6"><span class="section-number-2">1</span> code examples</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
-<li><a href="codes/scala/spark/src/main/scala/AvroDataFrame.scala">使用Spark DataFrame操作Avro文件</a></li>
-<li><a href="codes/scala/spark/src/main/scala/AvroRawRDD.scala">使用Spark RDD操作Avro文件</a></li>
-<li><a href="codes/scala/spark/src/main/scala/TestOnHBase.scala">使用Spark读写HBase</a></li>
+<li><a href="https://github.com/dirtysalt/dirtysalt.github.io/tree/master/codes/scala/spark/src/main/scala/AvroDataFrame.scala">使用Spark DataFrame操作Avro文件</a></li>
+<li><a href="https://github.com/dirtysalt/dirtysalt.github.io/tree/master/codes/scala/spark/src/main/scala/AvroRawRDD.scala">使用Spark RDD操作Avro文件</a></li>
+<li><a href="https://github.com/dirtysalt/dirtysalt.github.io/tree/master/codes/scala/spark/src/main/scala/TestOnHBase.scala">使用Spark读写HBase</a></li>
 </ul>
 </div>
 </div>
