--- a/html/sudoku-solving.html
+++ b/html/sudoku-solving.html
@@ -13,7 +13,7 @@
 <div id="content">
 <h1 class="title">数独程序求解</h1>
 <p>
-<a href="codes/contest/misc/sudoku.py">code on github</a>
+<a href="https://github.com/dirtysalt/dirtysalt.github.io/tree/master/codes/contest/misc/sudoku.py">code on github</a>
 </p>
 
 <p>
