--- a/html/ubuntu.html
+++ b/html/ubuntu.html
@@ -434,7 +434,7 @@ tcpdump
 </ul>
 
 <p>
-我也做了个简单的 <a href="codes/misc/deb-package">sample</a> 供参考
+我也做了个简单的 <a href="https://github.com/dirtysalt/dirtysalt.github.io/tree/master/codes/misc/deb-package">sample</a> 供参考
 </p>
 </div>
 </div>
