--- a/html/kaggle-digit-recongnizer.html
+++ b/html/kaggle-digit-recongnizer.html
@@ -13,7 +13,7 @@
 <div id="content">
 <h1 class="title">Kaggle Digit Recognizer</h1>
 <p>
-<a href="codes/kaggle/digit-recognizer/">code on github</a>
+<a href="https://github.com/dirtysalt/dirtysalt.github.io/tree/master/codes/kaggle/digit-recognizer/">code on github</a>
 </p>
 
 <p>
@@ -33,7 +33,7 @@
 </p>
 
 <p>
-note(dirlt @ 2015-04-17): 借用fzh师姐的一台GPU机器跑了CNN模型。我记得之前用caffe的CNN结果大约是0.99071，使用的数据集合是通过rotate增加了(-20, -16, ..20)这些角度的旋转，不过跑的轮数不太多。这个我稍微修改了一下 <a href="codes/kaggle/digit-recognizer/cnn.py">code</a> ，使用streaming-input方式可以在线地对训练数据集合进行不同角度的旋转，尝试利用GPU多训练几轮，看看是否有改进提升(LB = 0.99371).
+note(dirlt @ 2015-04-17): 借用fzh师姐的一台GPU机器跑了CNN模型。我记得之前用caffe的CNN结果大约是0.99071，使用的数据集合是通过rotate增加了(-20, -16, ..20)这些角度的旋转，不过跑的轮数不太多。这个我稍微修改了一下 <a href="https://github.com/dirtysalt/dirtysalt.github.io/tree/master/codes/kaggle/digit-recognizer/cnn.py">code</a> ，使用streaming-input方式可以在线地对训练数据集合进行不同角度的旋转，尝试利用GPU多训练几轮，看看是否有改进提升(LB = 0.99371).
 </p>
 </div>
 <div id="content"><!-- DISQUS BEGIN --><div id="disqus_thread"></div><script>/***  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/var disqus_config = function () {this.page.url = 'https://dirtysalt.github.io/html/kaggle-digit-recongnizer.html';this.page.identifier = 'kaggle-digit-recongnizer.html';};(function() {var d = document, s = d.createElement('script');s.src = 'https://dirlt.disqus.com/embed.js';s.setAttribute('data-timestamp', +new Date());(d.head || d.body).appendChild(s);})();</script><noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript><!-- DISQUS END --></div></body>
