[R] publish org files

--- a/html/index-sd.html
+++ b/html/index-sd.html
@@ -172,6 +172,7 @@
 <li><a href="future-of-code.html">代码的未来</a> by 松本行弘</li>
 <li><a href="how-to-be-a-programmer.html">How to be a Programmer</a></li>
 <li><a href="geekbang-coolshell-index.html">极客时间|左耳听风 文章目录</a></li>
+<li><a href="im-hft-engineer-zhihu.html">我是高频交易工程师</a></li>
 </ul>
 </div>
 </div>
