[R] publish org files

--- a/html/paste.html
+++ b/html/paste.html
@@ -12,6 +12,40 @@
 <body>
 <div id="content">
 <h1 class="title">Paste</h1>
+<p>
+但这是你口中说的因为大家是螺丝钉，每个人都不重要么？不是。这恰好是每一个角色都重要，重要到每一个角色本身不得不变成可以被同类雇员替换。个人英雄主义只能撑得起一部好莱坞电影，但撑不起一个万亿级的行业。这个行业过度到今天，已经十分标准化了，里面的每一个角色都有高度替代性。这是一个行业走向成熟的必经之路。只有这样的人员替代性，才能保证这个行业谁走谁留都一样能继续运转下去。
+</p>
+
+
+<p>
+而你面对这一切也不用悲观，这个“替代性”也是一个向上的螺旋。你工作的第一年，几乎所有人都能替代你；等到你成长后，你会发现能替代的人在像漏斗一样，越来越少。
+</p>
+
+
+<p>
+当然，这个拒绝螺丝钉的心态不光关乎你职业发展。最关键的一点，这心态是个很危险的信号，它会让你今后过得不快乐。你将一直处在一种要跟自己、跟别人、跟生活现状较劲的状态。”
+</p>
+
+<hr />
+<p>
+在这个意义上，宇宙学思维告诉我们的生活观念差不多是这样的 ——
+</p>
+<ul class="org-ul">
+<li>第一，如果你心里想的是比赛的话，那么在这个赛道上，你知道你拥有多么难得的优越条件。</li>
+<li>第二，在赛道的远处，还有很多很多比你领先到不知哪里去的人。</li>
+<li>第三，还有很多很多别的赛道，是你连想都没想到的，绝大多数人根本不在意你参加的这个比赛。</li>
+<li>第四，你跟所有人都有联系。</li>
+<li>第五，人生根本就不是比赛。</li>
+</ul>
+<p>
+这五点代表五个不同的视角，完全取决于你想怎么看。如果你能同时接受这五点，你就既能努力做好自己的事，同时还保持谦虚，同时还能跟所有人平等相处，同时还能在任何时候得到幸福感。看似矛盾，其实不矛盾。
+</p>
+
+<hr />
+<p>
+经过 20 年的发展，中国成为了世界上最繁荣的互联网市场，用无数资本和努力换来了大量先进经验和人才。比如“张小龙的产品观，字节跳动的内容产品方法论，拼多多的增长黑客”这些最一线的经验都只流通在中文世界中。
+</p>
+
 <hr />
 <p>
 有很多成功人士，他们完全知道怎么不断进步，知道怎么刻意练习，知道如何造势，知道怎么高别人一头，但是他们并不一定幸福。他的心态可能失衡，他一和人比较就沮丧，搞不好还会自杀。
