[R] publish org files

--- a/html/blogs.html
+++ b/html/blogs.html
@@ -34,6 +34,7 @@
 <h2 id="org78deaeb"><span class="section-number-2">1</span> 2019</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
+<li>201902 <a href="tour-of-forbidden-city-on-festival-day.html">春节逛了一圈故宫</a></li>
 <li>201902 <a href="lucky-to-have-someone-to-share.html">能找到一个人分享是多么难得的一件事情</a></li>
 <li>201901 <a href="instagram-engineering-3-rules-to-a-scalable-cloud-application-architecture.html">Instagram Engineering’s 3 rules to a scalable cloud application architecture</a></li>
 <li>201901 <a href="geekbang-tech-and-business-cases.html">极客时间|技术与商业案例解读 文章目录</a></li>
@@ -440,6 +441,8 @@
 <li><a href="review-2016.html">回顾2016</a></li>
 <li><a href="review-2017.html">回顾2017</a></li>
 </ul></li>
+<li><a href="about-me.html">个人介绍 AboutMe</a></li>
+<li><a href="micro-twitter.html">只言片语 MicroTwitter</a></li>
 </ul>
 </div>
 </div>
@@ -451,7 +454,6 @@
 People:
 </p>
 <ul class="org-ul">
-<li><a href="blogs.html">my blog</a> &amp; <a href="about-me.html">about me</a></li>
 <li>jwz. <a href="http://www.jwz.org/blog/">blog</a> &amp; <a href="http://www.jwz.org/doc/">doc</a> "you can divide our industry into two kinds of people: those who want to go work for a company to make it successful, and those who want to go work for a successful company. " - <a href="http://www.jwz.org/gruntle/nomo.html">jwz</a>)</li>
 <li>Leslie Lamport. <a href="http://research.microsoft.com/en-us/um/people/lamport/pubs/pubs.html">http://research.microsoft.com/en-us/um/people/lamport/pubs/pubs.html</a></li>
 <li>James Hamilton. <a href="http://mvdirona.com/jrh/work/">http://mvdirona.com/jrh/work/</a></li>
