--- a/html/blogs.html
+++ b/html/blogs.html
@@ -34,8 +34,8 @@
 <h2 id="org78deaeb"><span class="section-number-2">1</span> 2019</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
-<li>201902 <a href="tour-of-forbidden-city-on-festival-day.html">春节逛了一圈故宫</a></li>
-<li>201902 <a href="lucky-to-have-someone-to-share.html">能找到一个人分享是多么难得的一件事情</a></li>
+<li>201902 <a href="tour-of-forbidden-city-on-festival-day.html">春节逛圈故宫</a></li>
+<li>201902 <a href="lucky-to-have-someone-to-share.html">能找到一个人分享是多么难得的事情</a></li>
 <li>201901 <a href="instagram-engineering-3-rules-to-a-scalable-cloud-application-architecture.html">Instagram Engineering’s 3 rules to a scalable cloud application architecture</a></li>
 <li>201901 <a href="geekbang-tech-and-business-cases.html">极客时间|技术与商业案例解读 文章目录</a></li>
 <li>201901 <a href="geekbang-ai-internal-reference.html">极客时间|AI技术内参 文章目录</a></li>
@@ -440,6 +440,7 @@
 <li><a href="review-2015.html">回顾2015</a></li>
 <li><a href="review-2016.html">回顾2016</a></li>
 <li><a href="review-2017.html">回顾2017</a></li>
+<li><a href="review-2018.html">回顾2018</a></li>
 </ul></li>
 <li><a href="about-me.html">个人介绍 AboutMe</a></li>
 <li><a href="micro-twitter.html">只言片语 MicroTwitter</a></li>
