--- a/html/tour-of-forbidden-city-on-festival-day.html
+++ b/html/tour-of-forbidden-city-on-festival-day.html
@@ -77,6 +77,12 @@
 <p><img src="images/tour-of-forbidden-city-1.jpg" alt="tour-of-forbidden-city-1.jpg" />
 </p>
 </div>
+
+
+<div class="figure">
+<p><img src="images/tour-of-forbidden-city-2.jpg" alt="tour-of-forbidden-city-2.jpg" />
+</p>
+</div>
 </div>
 <div id="content"><!-- DISQUS BEGIN --><div id="disqus_thread"></div><script>/***  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/var disqus_config = function () {this.page.url = 'https://dirtysalt.github.io/html/tour-of-forbidden-city-on-festival-day.html';this.page.identifier = 'tour-of-forbidden-city-on-festival-day.html';};(function() {var d = document, s = d.createElement('script');s.src = 'https://dirlt.disqus.com/embed.js';s.setAttribute('data-timestamp', +new Date());(d.head || d.body).appendChild(s);})();</script><noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript><!-- DISQUS END --></div></body>
 </html>
