[R] publish org files

--- a/html/fun.html
+++ b/html/fun.html
@@ -14,6 +14,43 @@
 <h1 class="title">Fun</h1>
 <hr />
 <p>
+@马伯庸
+</p>
+
+<p>
+刚才发生的事。几乎把我本年度的尴尬余额都用光了……
+</p>
+
+<p>
+有一个软件&#x2014;我就不说是什么了免得有广告嫌疑&#x2014;总之这东西有一个功能，你念十段话，它可以自动生成你的语音库，以后不管输入什么文字，它就可以用你的声音念出来。单字发音很像，不过连读起来很呆板，念得很慢，单字蹦。
+</p>
+
+<p>
+今天中午跟朋友吃饭，我说这功能进化下去太可怕了，以后可以随意冒充你讲话。我现场演示了一下，打了一段文字：“我是马伯庸，我现在被人绑架了，请打100万给某某账号，否则性命难保，嘤嘤嘤”，然后软件就用我的声音给读出来了。大家纷纷表示感叹不提。
+</p>
+
+<p>
+吃饱喝足，我开车送一朋友回去。我俩一上车，收费员凑上来收停车费。我放下车窗，一边问多少钱，一边发动了车子。
+</p>
+
+<p>
+尴尬就在这儿了。我的车子一发动，手机就会自动用蓝牙连上车内音响，自动播放最近的音频。偏偏我听音乐喜欢开得很大声。
+</p>
+
+<p>
+于是……在收费员亮出二维码的一刹那，车内外突然响彻我充满磁性的声音：我是马伯庸，我现在被人绑架了，请打100万给某某账号，否则性命难保，嘤嘤嘤”。
+</p>
+
+<p>
+我看到收费员的手明显抖了一下，表情僵硬，强作镇定。坐在副驾的朋友也表情僵硬，仿佛她就是那个该死的绑匪。我想赶紧把这该死的声音关掉，回身一急，把手机掉到踏板下面，非得开门弯腰去捡才行。我一推门，收费员蹭地往后跳了一大步，大概是怕我暴起行凶灭口。我硬着头皮开车门，在“我”呆板的嘤嘤声中撅起屁股，够出手机，关上车门，飞快地开车逃走。在后视镜里，我看到收费员还在跟同伴指指点点。
+</p>
+
+<p>
+副驾的朋友偏偏还要捅上一刀：“你当时直接关掉音响不就得了？干嘛非要去手机上关？”
+</p>
+
+<hr />
+<p>
 期末考试又要到了[笑而不语][笑而不语]
 </p>
 
