[R] publish org files

--- a/html/books.html
+++ b/html/books.html
@@ -78,6 +78,7 @@
 <li><a href="competitive-strategy.html">竞争策略 on Coursera</a></li>
 <li><a href="financial-markets-class.html">金融市场 on Coursera</a></li>
 <li><a href="images/shizhan/index.html">大师课-施展-枢纽</a> on 得到App</li>
+<li><a href="chenyu-on-internet-finance.html">风吹江南之互联网金融</a> by 陈宇</li>
 </ul>
 </div>
 </div>
