[R] publish org files

--- a/html/books.html
+++ b/html/books.html
@@ -112,6 +112,7 @@
 <li><a href="black-swan.html">黑天鹅(Black Swan)</a> by Nassim Nicolas Taleb</li>
 <li><a href="the-bed-of-procrustes.html">随机生存的智慧: 黑天鹅语录(The Bed of Procrustes)</a> by Nassim Nicholas Taleb</li>
 <li><a href="antifragile.html">反脆弱: 从不确定性中获益(Antifragile: Things That Gain from Disorder)</a> by Nassim Nicholas Taleb</li>
+<li><a href="nnt-words-archive.html">NNT文字合集</a> by NNT</li>
 <li><a href="how-to-win-friends-and-influence-people.html">人性的弱点全集(How to win friends and influence people)</a> by Dale Carnegie</li>
 <li><a href="how-to-stop-worring-and-start-living.html">人性的优点全集(How to stop worring and start living)</a> by Dale Carnegie</li>
 <li><a href="hard-to-believe.html">万万没想到:用理工科思维理解世界</a> by 万维刚</li>
