[R] publish org files

--- a/html/fun.html
+++ b/html/fun.html
@@ -13,6 +13,13 @@
 <div id="content">
 <h1 class="title">Fun</h1>
 <hr />
+
+<div class="figure">
+<p><img src="images/ultrasound-flying-birds.png" alt="ultrasound-flying-birds.png" />
+</p>
+</div>
+
+<hr />
 <p>
 @马伯庸
 </p>
