[R] publish org files

--- a/html/blogs.html
+++ b/html/blogs.html
@@ -34,6 +34,7 @@
 <h2 id="org78deaeb"><span class="section-number-2">1</span> 2019</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
+<li>201904 <a href="polyglot-persistence.html">Polyplot Persistence</a> 混合使用各种存储系统</li>
 <li>201903 <a href="lessons-learned-from-fighting-against-haze.html">我当时认为治霾这事很简单，结果走一走发现不对劲，然后恍然大悟 | 陶光远 一席第###位讲者</a></li>
 <li>201903 <a href="strangler-application.html">StranglerApplication</a> 扼杀者应用（如何有效安全地替换掉老的应用）</li>
 <li>201903 <a href="pitalls-of-python-ecosystem.html">Python生态系统里的各种陷阱</a></li>
